<?xml version="1.0"?>
<package format="2">
  <name>hand_hide</name>
  <version>0.0.0</version>
  <description>The hand_hide package</description>

  <maintainer email="asouhide2002@gmail.com">Hidetoshi Aso</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>


  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
